cluster/core/rook-ceph/04dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-ceph-mgr-dashboard
  namespace: rook-ceph
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app.kubernetes.io/instance: rook-ceph-mgr-dashboard
    app.kubernetes.io/name: rook-ceph-mgr-dashboard
spec:
  ingressClassName: "traefik"
  rules:
  - host: "rook.bergmann.click"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rook-ceph-mgr-dashboard
            port:
              name: http-dashboard
  tls:
  - hosts:
    - "rook.bergmann.click"
